k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: proxy-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /upload-image-service(/|$)(.*) # /upload-image-service/v1/demo
            backend:
              serviceName: upload-image-service
              servicePort: 8080
          - path: /image-service(/|$)(.*)
            backend:
              serviceName: image-service
              servicePort: 8080
          - path: /comment-service(/|$)(.*)
            backend:
              serviceName: comment-service
              servicePort: 8080
          - path: /user-service(/|$)(.*)
            backend:
              serviceName: user-service
              servicePort: 8080
          - path: /album-service(/|$)(.*)
            backend:
              serviceName: album-service
              servicePort: 8080
